Prepare to kh21
- upgraded jaxon dependency to current jv7 0.4 version
- changed logging, only to console and only WARN levels